--- a/Finals/service.html
+++ b/Finals/service.html
@@ -6,14 +6,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Finals</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <!-- Site header  -->
     <header class="header">
-        <img class="logo" src="./images/Logo.png" alt="my logo">
+        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #88A7B9;">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#"><img class="logo" src="./images/Logo.png" alt="my logo"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="about.html">ABOUT</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="portfolio.html">PORTFOLIO</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="service.html">SERVICE</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contact.html">CONTACT</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <!-- <img class="logo" src="./images/Logo.png" alt="my logo">
         <nav id="nav">
             <ul>
                 <li><a href="index.html">HOME</a></li>
@@ -22,9 +52,7 @@
                 <li><a href="service.html">SERVICE</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
             </ul>
-        </nav>
-        </div>
-        </div>
+        </nav> -->
     </header>
     <main>
         <header class="banner">
@@ -38,7 +66,7 @@
                     <img src="./images/Coding.png" alt=" a laptop" class="service">
                     <div class="card-text">
                         <h3>Web-development</h3>
-                        <button>Learn more</button>
+                        <button class="service-button">Learn more</button>
                     </div>
                 </div>
             </div>
@@ -48,7 +76,7 @@
                         <img src="./images/Photography.JPG" alt="a photo" class="service">
                         <div class="card-text">
                             <h3>Photography</h3>
-                            <button>Learn more</button>
+                            <button class="service-button">Learn more</button>
                         </div>
                     </div>
                 </div>
@@ -60,7 +88,7 @@
                         <div class="card-text">
                             <h3>Videography</h3>
                             <p>I don't have any of my work for this on display yet but it will surely come true</p>
-                            <button>Coming soon!!</button>
+                            <button class="service-button">Coming soon!!</button>
                         </div>
                     </div>
                 </div>
