fixing minior error

--- a/Finals/contact.html
+++ b/Finals/contact.html
@@ -87,13 +87,13 @@
             <div class="name">
                 <label for="Message"></label>
                 <textarea id="Details" name="Feedback" placeholder="Details..."></textarea>
-                <button class="button">Submit</button>
+                <button class="Hire-button">Submit</button>
             </div>
         </form>
         <footer>
             <div class="foot">
                 <p>@copyright of Fetomi</p>
-                <i id="socials-footer"class="fab fa-twitter-square"></i>
+                <i id="socials-footer" class="fab fa-twitter-square"></i>
                 <i id="socials-footer" class="fab fa-facebook-square"></i>
                 <i id="socials-footer" class="fab fa-youtube-square"></i>
                 <i id="socials-footer" class="fab fa-instagram-square"></i>
