--- a/Finals/about.html
+++ b/Finals/about.html
@@ -31,7 +31,7 @@
                             <a class="nav-link" href="about.html">ABOUT</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="portfolio.html">PORTFOLIO/a>
+                            <a class="nav-link" href="portfolio.html">PORTFOLIO</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="service.html">SERVICE</a>
