--- a/Finals/about.html
+++ b/Finals/about.html
@@ -8,6 +8,8 @@
     <title>Finals</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -80,13 +82,18 @@
                 <button class="profile-button">Hire Me</button>
             </div>
         </div>
+
         <footer>
             <div class="foot">
-                <p>@copyright of Fetomi</p>
-                <i id="socials-footer" class="fab fa-twitter-square"></i>
-                <i id="socials-footer" class="fab fa-facebook-square"></i>
-                <i id="socials-footer"class="fab fa-youtube-square"></i>
-                <i id="socials-footer" class="fab fa-instagram-square"></i>
+                <div id="footericon">
+                    <i id="socials-footer" class="fab fa-twitter-square"></i>
+                    <i id="socials-footer" class="fab fa-facebook-square"></i>
+                    <i id="socials-footer" class="fab fa-youtube-square"></i>
+                    <i id="socials-footer" class="fab fa-instagram-square"></i>
+                </div>
+                <div id="footer-p">
+                    <p>@copyright of Fetomi</p>
+                </div>
             </div>
         </footer>
     </main>
