--- a/Finals/contact.html
+++ b/Finals/contact.html
@@ -62,47 +62,54 @@
                 <h2>Hire Me</h2>
             </div>
         </header>
-        <h1>Note</h1>
-        <p>In the details box,please fill out all the necessery details I need depending on the service you
-            choiced.If web development please I nedd a required mockup of the website you want me to create, if
-            videography please just list your target audience and what tpe of video your try to create and last but not
-            least for photography just come in or hire me for an event depending on what you want.
-        </p>
-        <form id="hire-me">
-            <h2>Hire Me.</h2>
-            <div class="name">
-                <label for="Fullname"></label>
-                <input placeholder="Fullname" type="text" id="Fullname">
+        <div id="contact">
+            <div class="con">
+                <h3>Note</h3>
+                <p>In the details box,please fill out all the necessery details I need depending on the service you
+                    choiced.If web development please I need a required mockup of the website you want me to create, if
+                    videography please just list your target audience and what tpe of video your try to create and last
+                    but not
+                    least for photography just come in or hire me for an event depending on what you want.
+                </p>
             </div>
-            <div class="name">
-                <label for="service"></label>
-                <input placeholder="service" type="text" id="service">
+            <div class="con">
+                <form id="hire-me">
+                    <h1>Hire Me.</h2>
+                        <div class="name">
+                            <label for="Fullname"></label>
+                            <input placeholder="Fullname" type="text" id="Fullname">
+                        </div>
+                        <div class="name">
+                            <label for="service"></label>
+                            <input placeholder="service" type="text" id="service">
+                        </div>
+                        <div class="name">
+                            <label for="Email"></label>
+                            <input placeholder="Email" type="Email" id="Email">
+                        </div>
+                        <div class="name">
+                            <label for="time"></label>
+                            <input placeholder="time" type="time">
+                        </div>
+                        <div class="name">
+                            <label for="Message"></label>
+                            <textarea id="Details" name="Feedback" placeholder="Details..."></textarea>
+                            <button class="Hire-button">Submit</button>
+                        </div>
+                </form>
             </div>
-            <div class="name">
-                <label for="Email"></label>
-                <input placeholder="Email" type="Email" id="Email">
-            </div>
-            <div class="name">
-                <label for="time"></label>
-                <input placeholder="time" type="time">
-            </div>
-            <div class="name">
-                <label for="Message"></label>
-                <textarea id="Details" name="Feedback" placeholder="Details..."></textarea>
-                <button class="Hire-button">Submit</button>
-            </div>
-        </form>
+        </div>
 
         <footer>
             <div class="foot">
+                <div>
+                    <h4>@copyright of Fetomi</h4>
+                </div>
                 <div id="footericon">
                     <i id="socials-footer" class="fab fa-twitter-square"></i>
                     <i id="socials-footer" class="fab fa-facebook-square"></i>
                     <i id="socials-footer" class="fab fa-youtube-square"></i>
                     <i id="socials-footer" class="fab fa-instagram-square"></i>
-                </div>
-                <div id="footer-p">
-                    <p>@copyright of Fetomi</p>
                 </div>
             </div>
         </footer>
