--- a/Finals/service.html
+++ b/Finals/service.html
@@ -99,15 +99,17 @@
 
         <footer>
             <div class="foot">
+                <div>
+                    <h4>@copyright of Fetomi</h4>
+                </div>
                 <div id="footericon">
                     <i id="socials-footer" class="fab fa-twitter-square"></i>
                     <i id="socials-footer" class="fab fa-facebook-square"></i>
                     <i id="socials-footer" class="fab fa-youtube-square"></i>
                     <i id="socials-footer" class="fab fa-instagram-square"></i>
                 </div>
-                <div id="footer-p">
-                    <p>@copyright of Fetomi</p>
-                </div>
+            </div>
+        </footer>
             </div>
         </footer>
     </main>
