--- a/Finals/index.html
+++ b/Finals/index.html
@@ -56,17 +56,19 @@
     </header>
     <main>
         <div class="landingpage">
-            <div class="container-text">
-                <h1>Welcome to Fetomi's freelancer webisite</h1>
-                <h2>Hello I'm Prinye Wilcox</h2>
-                <p>A freelancer for web development, photography and videography</p>
-                <div id="landingpage-button">
-                    <button class="hire">Hire Me</button>
-                    <button class="work">My work</button>
+            <div id="container">
+                <div class="container-text">
+                    <h1>Welcome to Fetomi's freelancer webisite</h1>
+                    <h2>Hello I'm Prinye Wilcox</h2>
+                    <p>A freelancer for web development, photography and videography</p>
+                    <div id="landingpage-button">
+                        <button class="hire">Hire Me</button>
+                        <button class="work">My work</button>
+                    </div>
                 </div>
-            </div>
-            <div>
-                <img class="me" src="./images/me.JPG" alt="an image of me">
+                <div class="container-image">
+                    <img class="me" src="./images/me.JPG" alt="an image of me">
+                </div>
             </div>
         </div>
 
