fixing minor issues

--- a/Finals/about.html
+++ b/Finals/about.html
@@ -71,7 +71,7 @@
                 </p>
             </div>
             <div class="profile-card">
-                <img src="./images/Image of me.JPG" alt="second image of me" class="profile-image">
+                <img class="profile-image" src="./images/imageofme.JPG" alt="second image of me">
                 <h3>Iprinye Wilcox</h3>
                 <p>Algonquin College</p>
                 <div>
@@ -89,13 +89,14 @@
                     <h4>@copyright of Fetomi</h4>
                 </div>
                 <div id="footericon">
-                    <i id="socials-footer" class="fab fa-twitter-square"></i>
-                    <i id="socials-footer" class="fab fa-facebook-square"></i>
-                    <i id="socials-footer" class="fab fa-youtube-square"></i>
-                    <i id="socials-footer" class="fab fa-instagram-square"></i>
+                    <i class="fab fa-twitter-square"></i>
+                    <i class="fab fa-facebook-square"></i>
+                    <i class="fab fa-youtube-square"></i>
+                    <i class="fab fa-instagram-square"></i>
                 </div>
             </div>
         </footer>
+
     </main>
 </body>
 
