--- a/Finals/contact.html
+++ b/Finals/contact.html
@@ -74,7 +74,7 @@
             </div>
             <div class="con">
                 <form id="hire-me">
-                    <h1>Hire Me.</h2>
+                    <h1>Hire Me.</h1>
                         <div class="name">
                             <label for="Fullname"></label>
                             <input placeholder="Fullname" type="text" id="Fullname">
@@ -106,13 +106,14 @@
                     <h4>@copyright of Fetomi</h4>
                 </div>
                 <div id="footericon">
-                    <i id="socials-footer" class="fab fa-twitter-square"></i>
-                    <i id="socials-footer" class="fab fa-facebook-square"></i>
-                    <i id="socials-footer" class="fab fa-youtube-square"></i>
-                    <i id="socials-footer" class="fab fa-instagram-square"></i>
+                    <i class="fab fa-twitter-square"></i>
+                    <i class="fab fa-facebook-square"></i>
+                    <i class="fab fa-youtube-square"></i>
+                    <i class="fab fa-instagram-square"></i>
                 </div>
             </div>
         </footer>
+
     </main>
 </body>
 
