--- a/Finals/portfolio.html
+++ b/Finals/portfolio.html
@@ -82,7 +82,7 @@
 
                 <div class="portfolio-card">
                     <h3>Photography</h3>
-                    <img class="portfilo" src="./images/photography portfolio.JPG" alt="portfilio">
+                    <img class="portfilo" src="./images/pp.JPG" alt="portfilio">
                 </div>
 
 
@@ -103,9 +103,7 @@
 
                 <div class="portfolio-card">
                     <h3>Web-development</h3>
-                    <img class="portfilo"
-                        src="./images/screencapture-127-0-0-1-5500-midterm-index-html-2021-04-02-09_28_31.png"
-                        alt="portfilio">
+                    <img class="portfilo" src="./images/wbd.png" alt="portfilio">
                 </div>
             </div>
         </div>
@@ -116,10 +114,10 @@
                     <h4>@copyright of Fetomi</h4>
                 </div>
                 <div id="footericon">
-                    <i id="socials-footer" class="fab fa-twitter-square"></i>
-                    <i id="socials-footer" class="fab fa-facebook-square"></i>
-                    <i id="socials-footer" class="fab fa-youtube-square"></i>
-                    <i id="socials-footer" class="fab fa-instagram-square"></i>
+                    <i class="fab fa-twitter-square"></i>
+                    <i class="fab fa-facebook-square"></i>
+                    <i class="fab fa-youtube-square"></i>
+                    <i class="fab fa-instagram-square"></i>
                 </div>
             </div>
         </footer>
