--- a/Finals/service.html
+++ b/Finals/service.html
@@ -103,15 +103,14 @@
                     <h4>@copyright of Fetomi</h4>
                 </div>
                 <div id="footericon">
-                    <i id="socials-footer" class="fab fa-twitter-square"></i>
-                    <i id="socials-footer" class="fab fa-facebook-square"></i>
-                    <i id="socials-footer" class="fab fa-youtube-square"></i>
-                    <i id="socials-footer" class="fab fa-instagram-square"></i>
+                    <i class="fab fa-twitter-square"></i>
+                    <i class="fab fa-facebook-square"></i>
+                    <i class="fab fa-youtube-square"></i>
+                    <i class="fab fa-instagram-square"></i>
                 </div>
             </div>
         </footer>
-            </div>
-        </footer>
+
     </main>
 </body>
 
