--- a/Finals/contact.html
+++ b/Finals/contact.html
@@ -75,27 +75,27 @@
             <div class="con">
                 <form id="hire-me">
                     <h1>Hire Me.</h1>
-                        <div class="name">
-                            <label for="Fullname"></label>
-                            <input placeholder="Fullname" type="text" id="Fullname">
-                        </div>
-                        <div class="name">
-                            <label for="service"></label>
-                            <input placeholder="service" type="text" id="service">
-                        </div>
-                        <div class="name">
-                            <label for="Email"></label>
-                            <input placeholder="Email" type="Email" id="Email">
-                        </div>
-                        <div class="name">
-                            <label for="time"></label>
-                            <input placeholder="time" type="time">
-                        </div>
-                        <div class="name">
-                            <label for="Message"></label>
-                            <textarea id="Details" name="Feedback" placeholder="Details..."></textarea>
-                            <button class="Hire-button">Submit</button>
-                        </div>
+                    <div class="name">
+                        <label for="Fullname"></label>
+                        <input placeholder="Fullname" type="text" id="Fullname">
+                    </div>
+                    <div class="name">
+                        <label for="service"></label>
+                        <input placeholder="service" type="text" id="service">
+                    </div>
+                    <div class="name">
+                        <label for="Email"></label>
+                        <input placeholder="Email" type="Email" id="Email">
+                    </div>
+                    <div class="name">
+
+                        <input type="time">
+                    </div>
+                    <div class="name">
+                        <label for="Details"></label>
+                        <textarea id="Details" name="Feedback" placeholder="Details..."></textarea>
+                        <button class="Hire-button">Submit</button>
+                    </div>
                 </form>
             </div>
         </div>
