--- a/Finals/about.html
+++ b/Finals/about.html
@@ -74,10 +74,10 @@
                 <img class="profile-image" src="./images/imageofme.JPG" alt="second image of me">
                 <h3>Iprinye Wilcox</h3>
                 <p>Algonquin College</p>
-                <div>
-                    <i id="socials" class="fab fa-twitter-square"></i>
-                    <i id="socials" class="fab fa-youtube-square"></i>
-                    <i id="socials" class="fab fa-instagram-square"></i>
+                <div id="socials">
+                    <i class="fab fa-twitter-square"></i>
+                    <i class="fab fa-youtube-square"></i>
+                    <i class="fab fa-instagram-square"></i>
                 </div>
                 <button class="profile-button">Hire Me</button>
             </div>
