--- a/Finals/about.html
+++ b/Finals/about.html
@@ -15,7 +15,7 @@
 
 <body>
     <!-- Site header  -->
-    <header class="header">
+    <header class="head">
         <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #88A7B9;">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#"><img class="logo" src="./images/Logo.png" alt="my logo"></a>
